Add batch size configuration for DeepLabCut processing
- Introduced `batch-size` parameter in `snk.yaml` to specify the number of frames processed in a single batch.
- Updated `Snakefile` to utilize the new `batch-size` parameter.
- Modified `run_deeplabcut.py` to accept `--batch-size` argument and pass it to the processing function.
- Added a new PDF file `dag.pdf`.

--- a/src/roithepig/snk.yaml
+++ b/src/roithepig/snk.yaml
@@ -35,6 +35,10 @@ cli:
   #   type: path
   #   help: Directory to save the processed video.
   #   default: "output"
+  batch-size:
+    type: int
+    help: Number of frames to process in a single batch.
+    default: 2
   debug:
     type: bool
     help: Enable debug mode instead of cropping to roi.
