--- a/src/roithepig/snk.yaml
+++ b/src/roithepig/snk.yaml
@@ -35,7 +35,7 @@ cli:
   #   type: path
   #   help: Directory to save the processed video.
   #   default: "output"
-  batch-size:
+  batch_size:
     type: int
     help: Number of frames to process in a single batch.
     default: 2
