--- a/src/roithepig/workflow/Snakefile
+++ b/src/roithepig/workflow/Snakefile
@@ -86,7 +86,7 @@ rule deeplabcut:
         output_dir = OUT_DIR / VIDEO_NAME,
         dlc_csv_filtered = temp(str(POSE_OUTPUT) + "_filtered.csv"),  # filtered CSV
         cropping  = f"--cropping {config['cropping']}" if config['cropping'] else "",
-        batch_size = config.get("batch-size", 2),  # number of frames to process in a single batch
+        batch_size = config.get("batch_size", 2),  # number of frames to process in a single batch
     shell:
         r"""
         set -euo pipefail
